--- a/.github/workflows/clean_build_docker.yml
+++ b/.github/workflows/clean_build_docker.yml
@@ -18,4 +18,4 @@ jobs:
       run: docker build /home/runner/work/panda -f /home/runner/work/panda/Dockerfile -t panda_local
 
     - name: Minimal test of built container # Just test to see if one of our binaries is installed
-      run: docker run --rm panda_local /bin/bash -c 'exit $(panda-system-arm -help | grep -q "usage: panda-system-arm")'
+      run: docker run --rm panda_local /bin/bash -c 'exit $(panda-system-arm -help | grep -q "usage. panda-system-arm")'
