--- a/.github/workflows/stage0_build.yml
+++ b/.github/workflows/stage0_build.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v1 # Clones code into to /home/runner/work/panda
 
     - name: Build docker container from project root
-      run: "cd /home/runner/work/panda && docker build -t panda_local_${{ github.sha }}"
+      run: "cd /home/runner/work/panda && docker build -t panda_local_${{ github.sha }} ."
 
     - name: Minimal test of built container # Just test to see if one of our binaries is installed
       run: docker run --rm "panda_local_${{ github.sha }}" /bin/bash -c 'exit $(panda-system-arm -help | grep -q "usage. panda-system-arm")'
