--- a/.github/workflows/stage0_build.yml
+++ b/.github/workflows/stage0_build.yml
@@ -18,6 +18,12 @@ jobs:
  
     - uses: actions/checkout@v1 # Clones code into to /home/runner/work/panda/panda/
 
+    - name: Test
+      run: "find /home/runner -name panda"
+
+    - name: Test2
+      run: "ls -al /home/runner/work/panda/panda"
+
     - name: Build docker container from project root
       run: "cd /home/runner/work/panda/panda && docker build -t panda_local_${{ github.sha }} ."
 
