--- a/.github/workflows/stage0_build.yml
+++ b/.github/workflows/stage0_build.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v2 # Clones code into to $GITHUB_WORKSPACE (/home/gha-svc/actions-runner-X/_work/panda/panda - where X might change?
 
     - name: Build docker container from project root
-      run: docker build -f $GITHUB_WORKSPACE/Dockerfile -t panda_local_${{ github.sha }} $GITHUB_WORKSPACE 
+      run: cd $GITHUB_WORKSPACE && docker build -t panda_local_${{ github.sha }} .
 
     - name: Minimal test of built container # Just test to see if one of our binaries is installed
       run: docker run --rm "panda_local_${{ github.sha }}" /bin/bash -c 'exit $(panda-system-arm -help | grep -q "usage. panda-system-arm")'
@@ -41,7 +41,7 @@ jobs:
     - uses: actions/checkout@v1 # Clones code into to /home/runner/work/panda
 
     - name: Build docker container from project root
-      run: docker build $GITHUB_WORKSPACE -f $GITHUB_WORKSPACE/Dockerfile -t panda_local .
+      run: cd $GITHUB_WORKSPACE && docker build -t panda_local .
 
     - name: Minimal test of built container # Just test to see if one of our binaries is installed
       run: docker run --rm panda_local /bin/bash -c 'exit $(panda-system-arm -help | grep -q "usage. panda-system-arm")'
